src/components/docs/components/left/left.module.scss
@use "styles/variables" as *;

.left {
  position: fixed;
  top: $header-height;
  left: 0;
  height: calc(100vh - $header-height);
  border-right: 0.1rem solid $color-divider;
  padding-left: $margin;
  width: calc(#{$margin} + 27rem);
  flex-shrink: 0;
  padding-top: 3.2rem;
  padding-bottom: 9.6rem;
  overflow: auto;

  @media (min-width: 89.25em /* 1428px = $max-width + $margin * 2 */) {
    padding-left: calc((100% - #{$max-width}) / 2);
    width: calc((100% - #{$max-width}) / 2 + 27rem);
  }
}

.sections {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  list-style: none;
}

.heading {
  font-size: 1.3rem;
  font-weight: 500;
  color: $color-primary;
  padding: 0.4rem 0;
  line-height: 1.95rem;
}

.subsections {
  list-style: none;
  display: flex;
  flex-direction: column;
}

.link {
  display: inline-block;
  font-size: 1.3rem;
  color: $color-secondary;
  text-decoration: none;
  font-weight: 400;
  padding: 0.4rem 0;
  line-height: 1.95rem;
  transition: all 0.2s ease;

  &.selected {
    color: $color-accent;
  }

  &:not(.selected):hover {
    color: $color-primary;
  }
}

